--- a/src/app/features/timesheet/components/fill-timesheet/fill-timesheet.component.html
+++ b/src/app/features/timesheet/components/fill-timesheet/fill-timesheet.component.html
@@ -1,17 +1,9 @@
 <div class="p-4">
 
-    <!-- 🔹 Timesheet Header -->
-    <!-- <div class="mb-6">
-        <div class="flex justify-between items-center">
-            <h2 class="text-2xl font-semibold">Filling Timesheet for</h2>
-            <span class="text-lg text-gray-700">{{ currentDate | date:'dd-MMMM-yyyy, EEEE' }}</span>
-        </div>
-    </div> -->
 <!-- Button to open the modal -->
-<button (click)="toggleModal('timesheet')" class="bg-blue-500 text-white px-4 py-2 rounded-lg">
+<button (click)="toggleModal('timesheet')" class="bg-blue-500 text-white px-4 py-2 rounded-lg my-4">
     Open Timesheet Modal
   </button>
-    <!-- 🔹 Input Fields Section -->
     <!-- Timesheet Form Modal -->
     <div *ngIf="showTimesheetModal" class="fixed inset-0 bg-gray-800 bg-opacity-50 flex justify-center items-center"
     (click)="toggleModal('timesheet')">
@@ -27,104 +19,141 @@
             <form #timesheetForm="ngForm" (ngSubmit)="submitTimesheet(); $event.preventDefault()">
                 <div class="bg-white p-6 rounded-xl grid grid-cols-2 gap-6">
                     <!-- First Row (Full Width) -->
-                    <div class="col-span-2 flex flex-col  items-center">
+                    <div class="col-span-2 flex flex-col items-center">
                         <label class="text-gray-700 font-medium">Filling Timesheet for</label>
                         <input type="date" class="p-2 border rounded-lg w-1/2 text-center" [(ngModel)]="selectedDate" [min]="minDate"
-                            [max]="maxDate" name="selectedDate" required>
+                            [max]="maxDate" name="selectedDate" #selectedDateInput="ngModel" required>
+                        <span class="text-red-500 text-sm"
+                            *ngIf="(selectedDateInput.invalid && selectedDateInput.touched) || (timesheetForm.submitted && selectedDateInput.invalid)">
+                            Date is required
+                        </span>
                     </div>
 
                     <!-- Second Row (Customer & Project) -->
                     <div class="flex flex-col">
                         <label class="text-gray-700 font-medium">Select Customer</label>
                         <select class="p-2 border rounded-lg" [(ngModel)]="selectedCustomer" name="selectedCustomer"
-                            (change)="onCustomerChange()" required>
+                            #selectedCustomerInput="ngModel" (change)="onCustomerChange()" required>
                             <option value="" disabled selected>Select Customer</option>
                             <option *ngFor="let customer of optionCustomers" [value]="customer.customer_id">
                                 {{ customer.customer_name }}
                             </option>
                         </select>
+                        <span class="text-red-500 text-sm"
+                            *ngIf="(selectedCustomerInput.invalid && selectedCustomerInput.touched) || (timesheetForm.submitted && selectedCustomerInput.invalid)">
+                            Customer is required
+                        </span>
                     </div>
 
                     <div class="flex flex-col">
                         <label class="text-gray-700 font-medium">Select Project</label>
                         <select class="p-2 border rounded-lg" [(ngModel)]="selectedProject" name="selectedProject"
-                            [disabled]="!selectedCustomer" (change)="onProjectChange()" required>
+                            #selectedProjectInput="ngModel" [disabled]="!selectedCustomer" (change)="onProjectChange()" required>
                             <option value="" disabled selected>Select Project</option>
                             <option *ngFor="let project of filterOptionProjects" [value]="project.project_id">
                                 {{ project.project_name }}
                             </option>
                         </select>
+                        <span class="text-red-500 text-sm"
+                            *ngIf="(selectedProjectInput.invalid && selectedProjectInput.touched) || (timesheetForm.submitted && selectedProjectInput.invalid)">
+                            Project is required
+                        </span>
                     </div>
 
-                    <!-- Third Row (Deliverable & Task Category) -->
-                    <div class="flex flex-col">
-                        <label class="text-gray-700 font-medium">Project Deliverable</label>
-                        <select class="p-2 border rounded-lg" [(ngModel)]="selectedDeliverable" name="selectedDeliverable"
-                            [disabled]="!selectedProject" required>
-                            <option value="" disabled selected>Select Deliverable</option>
-                            <option *ngFor="let deliverable of filterOptionProjectDeliverables" [value]="deliverable.pd_id">
-                                {{ deliverable.project_deliverable_name }}
-                            </option>
-                        </select>
-                    </div>
+                      <!-- Third Row (Deliverable & Task Category) -->
+            <div class="flex flex-col">
+                <label class="text-gray-700 font-medium">Project Deliverable</label>
+                <select class="p-2 border rounded-lg" [(ngModel)]="selectedDeliverable" name="selectedDeliverable"
+                    #selectedDeliverableInput="ngModel" [disabled]="!selectedProject" required>
+                    <option value="" disabled selected>Select Deliverable</option>
+                    <option *ngFor="let deliverable of filterOptionProjectDeliverables" [value]="deliverable.pd_id">
+                        {{ deliverable.project_deliverable_name }}
+                    </option>
+                </select>
+                <span class="text-red-500 text-sm"
+                    *ngIf="(selectedDeliverableInput.invalid && selectedDeliverableInput.touched) || (timesheetForm.submitted && selectedDeliverableInput.invalid)">
+                    Deliverable is required
+                </span>
+            </div>
 
-                    <div class="flex flex-col">
-                        <label class="text-gray-700 font-medium">Task Category</label>
-                        <select class="p-2 border rounded-lg" [(ngModel)]="selectedTaskCategory" name="selectedTaskCategory"
-                            required>
-                            <option value="" disabled selected>Select Task Category</option>
-                            <option *ngFor="let category of optionTaskCategories" [value]="category.task_cat_id">
-                                {{ category.task_category_name }}
-                            </option>
-                        </select>
-                    </div>
+            <div class="flex flex-col">
+                <label class="text-gray-700 font-medium">Task Category</label>
+                <select class="p-2 border rounded-lg" [(ngModel)]="selectedTaskCategory" name="selectedTaskCategory"
+                    #selectedTaskCategoryInput="ngModel" required>
+                    <option value="" disabled selected>Select Task Category</option>
+                    <option *ngFor="let category of optionTaskCategories" [value]="category.task_cat_id">
+                        {{ category.task_category_name }}
+                    </option>
+                </select>
+                <span class="text-red-500 text-sm"
+                    *ngIf="(selectedTaskCategoryInput.invalid && selectedTaskCategoryInput.touched) || (timesheetForm.submitted && selectedTaskCategoryInput.invalid)">
+                    Task Category is required
+                </span>
+            </div>
 
                     <!-- Fourth Row (Full Width - Task Description) -->
-                    <div class="col-span-2 flex flex-col">
-                        <label class="text-gray-700 font-medium">Task Description</label>
-                        <textarea class="p-2 border rounded-lg" [(ngModel)]="taskDescription" name="taskDescription"
-                            rows="3" required></textarea>
-                    </div>
+            <div class="col-span-2 flex flex-col">
+                <label class="text-gray-700 font-medium">Task Description</label>
+                <textarea class="p-2 border rounded-lg" [(ngModel)]="taskDescription" name="taskDescription"
+                    #taskDescriptionInput="ngModel" rows="3" required></textarea>
+                <span class="text-red-500 text-sm"
+                    *ngIf="(taskDescriptionInput.invalid && taskDescriptionInput.touched) || (timesheetForm.submitted && taskDescriptionInput.invalid)">
+                    Task Description is required
+                </span>
+            </div>
 
-                    <!-- Fifth Row (Hours & Minutes) -->
-                    <div class="flex flex-col">
-                        <label class="text-gray-700 font-medium">Hours</label>
-                        <select class="p-2 border rounded-lg" [(ngModel)]="selectedHours" name="selectedHours" required>
-                            <option *ngFor="let hour of hoursList" [value]="hour">{{ hour }}</option>
-                        </select>
-                    </div>
+                      <!-- Fifth Row (Hours & Minutes) -->
+            <div class="flex flex-col">
+                <label class="text-gray-700 font-medium">Hours</label>
+                <select class="p-2 border rounded-lg" [(ngModel)]="selectedHours" name="selectedHours"
+                    #selectedHoursInput="ngModel" required>
+                    <option *ngFor="let hour of hoursList" [value]="hour">{{ hour }}</option>
+                </select>
+                <span class="text-red-500 text-sm"
+                    *ngIf="(selectedHoursInput.invalid && selectedHoursInput.touched) || (timesheetForm.submitted && selectedHoursInput.invalid)">
+                    Hours are required
+                </span>
+            </div>
 
-                    <div class="flex flex-col">
-                        <label class="text-gray-700 font-medium">Minutes</label>
-                        <select class="p-2 border rounded-lg" [(ngModel)]="selectedMinutes" name="selectedMinutes"
-                            required>
-                            <option *ngFor="let minute of minutesList" [value]="minute">{{ minute }}</option>
-                        </select>
-                    </div>
+            <div class="flex flex-col">
+                <label class="text-gray-700 font-medium">Minutes</label>
+                <select class="p-2 border rounded-lg" [(ngModel)]="selectedMinutes" name="selectedMinutes"
+                    #selectedMinutesInput="ngModel" required>
+                    <option *ngFor="let minute of minutesList" [value]="minute">{{ minute }}</option>
+                </select>
+                <span class="text-red-500 text-sm"
+                    *ngIf="(selectedMinutesInput.invalid && selectedMinutesInput.touched) || (timesheetForm.submitted && selectedMinutesInput.invalid)">
+                    Minutes are required
+                </span>
+            </div>
 
                     <!-- Sixth Row (Full Width - Task Status) -->
-                    <div class="col-span-2 flex flex-col items-center">
-                        <label class="text-gray-700 font-medium mb-2">Task Status</label>
-                        <div class="flex space-x-2">
-                            <button type="button" class="px-6 py-2 rounded-lg text-white transition"
-                                [class.bg-green-600]="selectedTaskStatus === 1"
-                                [class.bg-gray-300]="selectedTaskStatus !== 1" (click)="selectedTaskStatus = 1">
-                                ✅ Completed
-                            </button>
-                            <button type="button" class="px-6 py-2 rounded-lg text-white transition"
-                                [class.bg-yellow-600]="selectedTaskStatus === 0"
-                                [class.bg-gray-300]="selectedTaskStatus !== 0" (click)="selectedTaskStatus = 0">
-                                ⚠ In Progress
-                            </button>
-                        </div>
-                    </div>
+            <div class="col-span-2 flex flex-col items-center">
+                <label class="text-gray-700 font-medium mb-2">Task Status</label>
+                <div class="flex space-x-2">
+                    <button type="button" class="px-6 py-2 rounded-lg text-white transition"
+                        [class.bg-green-600]="selectedTaskStatus === 1"
+                        [class.bg-gray-300]="selectedTaskStatus !== 1" (click)="selectedTaskStatus = 1">
+                        ✅ Completed
+                    </button>
+                    <button type="button" class="px-6 py-2 rounded-lg text-white transition"
+                        [class.bg-yellow-600]="selectedTaskStatus === 0"
+                        [class.bg-gray-300]="selectedTaskStatus !== 0" (click)="selectedTaskStatus = 0">
+                        ⚠ In Progress
+                    </button>
+                </div>
+                <span class="text-red-500 text-sm"
+                    *ngIf="(selectedTaskStatus === null && timesheetForm.submitted)">
+                    Task Status is required
+                </span>
+            </div>
 
                     <!-- Submit Button (Full Width) -->
                     <div class="col-span-2 flex justify-center mt-6">
                         <button type="submit"
-                        class="bg-blue-600 text-white py-3 px-6 rounded-lg hover:bg-blue-700 shadow-md">
-                        Submit
-                        </button>
+                    class="bg-blue-600 text-white py-3 px-6 rounded-lg hover:bg-blue-700 shadow-md" >
+                    Submit
+                </button>
                     </div>
                 </div>
             </form>
