Add customer and project selection to assign project team component; update navbar

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -19,8 +19,8 @@
 
   <!-- Navbar Center (Timesheet Links - Conditionally Shown) -->
   <div *ngIf="showTimesheetLinks" class="hidden sm:flex space-x-6">
-    <a [routerLink]="['/timesheet', 'summary-report']" routerLinkActive="font-bold text-blue-600"
-      class="text-gray-700 hover:text-blue-600">Timesheet Summary Report</a>
+    <!-- <a [routerLink]="['/timesheet', 'summary-report']" routerLinkActive="font-bold text-blue-600"
+      class="text-gray-700 hover:text-blue-600">Timesheet Summary Report</a> -->
     <!-- <a [routerLink]="['/timesheet', 'fill-backdated-timesheet']" routerLinkActive="font-bold text-blue-600"
     class="text-gray-700 hover:text-blue-600">Fill Backdated Timesheet</a>
   <a [routerLink]="['/timesheet', 'view-my-projects']" routerLinkActive="font-bold text-blue-600"
