--- a/src/app/features/resource-management/components/assign-project-team/assign-project-team.component.html
+++ b/src/app/features/resource-management/components/assign-project-team/assign-project-team.component.html
@@ -1,1 +1,20 @@
-<p>assign-project-team works!</p>
+<!-- Select Customer -->
+<label class="block mb-2 font-semibold">Customer Name*</label>
+<select [(ngModel)]="selectedCustomerId" name="customer" (change)="filterProjects()" 
+        class="border p-2 w-full rounded-md">
+    <option value="" disabled selected>Select Customer</option>
+    <option *ngFor="let customer of optionCustomers" [value]="customer.customer_id">
+        {{ customer.customer_name }}
+    </option>
+</select>
+
+<!-- Select Project (Always Visible but Disabled if No Projects) -->
+<label class="block mb-2 font-semibold">Project Name*</label>
+<select [disabled]="filteredProjects.length === 0" class="border p-2 w-full rounded-md">
+    <option value="" disabled selected>Select Project</option>
+    <option *ngFor="let project of filteredProjects" [value]="project.project_id">
+        {{ project.project_name }}
+    </option>
+</select>
+
+
